@startuml

package ch.zucchinit.zauction {
    package Auth {
        interface UserRepository {
            findByEmail(String email): Optional<User>
            existsByEmail(String email): boolean
        }

        interface TokenRepository {
            deleteByExpireDateBefore(LocalDateTime date): void
        }

        class AuthDTO {
            class UserProfile
            class UserAccount
            class UserRegister
            class UserLogin
            class UserResetPassword
        }

        class AuthController {
            -userService: UserService
            -tokenService: TokenService
            +register(HttpServletResponse response, AuthDTO.UserRegister register): AuthDTO.UserProfile
            +login(HttpServletResponse response, AuthDTO.UserLogin login): AuthDTO.UserProfile
            +unregister(HttpServletResponse response): void
            +me(): AuthDTO.UserProfile
            +getAccount(): AuthDTO.UserAccount
            +updateAccount(AuthDTO.UserAccount userAccount): AuthDTO.UserAccount
            +resetPassword(AuthDTO.UserResetPassword userResetPassword): void
        }

        class UserService {
            -userRepository: UserRepository
            -passwordEncoder: BCryptPasswordEncoder
            +getUserFromContext(): User
            +isSameUser(User user): boolean
            +restrictUser(User user): void
            +restrictUsers(User[] users): void
            +findUserByEmailAndPassword(String email, String password): User
            +createUser(AuthDTO.UserRegister register): User
            +updateUser(AuthDTO.UserAccount userAccount): AuthDTO.UserAccount
            +resetPassword(AuthDTO.UserResetPassword userResetPassword): void
            +setBalanceForUser(User user, Decimal balance): void
        }

        class TokenService {
            -apiConfiguration: APIConfiguration
            -tokenRepository: TokenRepository
            +getCookieToken(String tokenValue): Cookie
            +extractCookieToken(Cookie[] cookies): Cookie
            +deleteCookieToken(): Cookie
            +registerToken(User user): void
            +findTokenById(String tokenValue): Token
            +unregisterToken(Token token): void
            +purgeExpiredTokens(): void
        }

        AuthController --> UserService
        AuthController --> TokenService
        AuthController --> AuthDTO
        UserService --> UserRepository
        UserService --> AuthDTO
        TokenService --> TokenRepository
    }

    package Category {
        interface CategoryRepository {
            findByParentIsNull(): Category[]
        }

        class CategoryController {
            -categoryService: CategoryService
            +all(): Category[]
        }

        class CategoryService {
            -categoryRepository: CategoryRepository
            +findAll(): Category[]
            +findById(Long id): Category
            +getChildIds(Long categoryId, Long ids[]): Long[]
            +getReverseCategories(Long categoryId): Category[]
        }

        CategoryController --> CategoryService
        CategoryService --> CategoryRepository
    }

    package Lot {
        interface LotRepository
        class LotDTO {
            class PaginatedLot
            class LotFilter
            class LotThumbnail
            class LotDetails
            class LotHistory
            class LotCreation
            class LotMediaAction
            class LotModification
            class LotTransferResult
        }

        class LotController {
            -lotService: LotService
            +paginate(Integer page, Integer take, LotDTO.LotFilters): LotDTO.LotPaginated<LotDTO.Thumbnail>
            +historyBuy(Integer page, Integer take): LotDTO.PaginatedLot<LotDTO.LotHistory>
            +historySell(Integer page, Integer take): LotDTO.PaginatedLot<LotDTO.LotHistory>
            +one(Long id): LotDTO.LotDetails
            +create(LotDTO.LotCreation lotCreation, Integer[] metas, Multipart[] files): LotDTO.LotDetails
            +update(Long id, LotDTO.LotModification lotModification, Lot.LotMediaAction[] metas, Multipart[] files): LotDTO.LotDetails
            +publishLot(Long id): void
            +closeLot(Long id): void
            +transferLot(Long id): LotDTO.LotTransferResult
        }

        class LotAuctionController {
            -lotService: LotService
            -auctionService: AuctionService
            +auctionsPerPeriod(Long id, String period): AuctionDTO.AuctionPrice[]
            +requestAuction(Long id, AuctionDTO.AuctionRequest auctionRequest): AuctionDTO.AuctionResponse
        }

        class LotService {
            -lotRepository: LotRepository
            -lotMediaService: LotMediaService
            -categoryService: CategoryService
            -auctionService: AuctionService
            -userService: UserService
            +findById(Long id): Lot
            +getRestrictedLot(Long id): Lot
            +findByPageWithCategoryAndSearch(Integer page, Integer take, LotDTO.LotFilter): LotDTO.PaginatedLot<LotDTO.LotThumbnail>
            +findByPageForHistory(Integer page, Integer take): LotDTO.PaginatedLot<LotDTO.LotHistory>
            +getLotDetails(Lot lot): LotDTO.LotDetails
            +createLot(LotDTO.LotCreation lotCreation, Map<Integer, MultipartFile> medias): Lot
            +updateLot(Long id, LotDTO.LotModification lotModification, LotDTO.LotMediaAction[] metas, MultipartFile[] medias): Lot
            +publishLot(Lot lot): void
            +closeLot(Lot lot): void
            +transferLot(Lot lot): LotDTO.LotTransferResult
            #setBuyerUserOnCloseLot(): void
        }

        class LotMediaService {
            -lotRepository: LotRepository
            -s3Connector: S3Connector
            +insertLotMedias(Lot lot, Map<Integer, MultipartFile> files): Lot
            +updateLotMedias(Lot lot, LotDTO.LotMediaAction[] metas, MultipartFile[] medias): Lot
            -getMediaName(Lot lot, MultipartFile file): String
        }

        class LotSpecifications {
            {static}orderByDatesDesc(): Specification<Lot>
            {static}orderById(): Specification<Lot>
            {static}isBuyer(Long userId): Specification<Lot>
            {static}isSeller(Long userId): Specification<Lot>
            {static}isAvailable(): Specification<Lot>
            {static}hasCategoryId(CategoryService categoryService, Long categoryId): Specification<Lot>
            {static}multiFieldSearch(String keyword): Specification<Lot>
            {static}betweenMaxAuctionPrice(Decimal min, Decimal max): Specification<Lot>
        }

        class LotExceptionsAdvice {
            +handleLotExceptionsConflicts(Exception ex): ExceptionsDTO.GenericError
        }

        class LotExceptions {
            class NotPublishedException
            class AlreadyPublishedException
            class NotClosedException
            class AlreadyClosedException
            class AlreadyTransferredException
        }

        LotController --> LotService
        LotController --> LotDTO
        LotAuctionController --> LotService
        LotAuctionController --> AuctionService
        LotService --> LotRepository
        LotService --> LotDTO
        LotService --> LotSpecifications
        LotService --> LotMediaService
        LotService --> CategoryService
        LotService --> AuctionService
        LotService --> UserService
        LotService --> LotExceptions
        LotMediaService --> LotRepository
    }

    package Auction {
        interface AuctionRepository {
            findByLotAndDateAfterOrderByDateDesc(Lot lot, LocalDateTime date): Auction[]
        }

        class AuctionDTO {
            class AuctionRequest
            class AuctionResponse
            class AuctionPrice
            class TimePeriod
        }

        class AuctionService {
            -auctionRepository: AuctionRepository
            -lotRepository: LotRepository
            -userService: UserService
            +createAuction(Lot lot, AuctionDTO.AuctionRequest): AuctionDTO.AuctionResponse
            +findAuctionsByPeriod(Lot lot, AuctionDTO.TimePeriod period): AuctionDTO.AuctionPrice[]
            -getPeriodKey(AuctionDTO.TimePeriod timePeriod): LocalDateTime
        }

        AuctionService --> AuctionRepository
        AuctionService --> LotRepository
        AuctionService --> AuctionDTO
        AuctionService --> UserService
    }

    Auction.AuctionService --> Lot.LotExceptions
    Lot.LotAuctionController --> Auction.AuctionDTO
    Lot.LotService --> Category.CategoryService
    Lot.LotService --> Auction.AuctionService
    Lot.LotService --> Auth.UserService
}

@enduml
